# Aion

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
aion/: __init__.py  cli.py  main.py
aion/api/: __init__.py  routes.py
aion/automation/: __init__.py  api.py  engine.py  engine_enhanced.py  registry.py  types.py
aion/conversation/: __init__.py  context.py  manager.py  session.py  types.py
aion/core/: __init__.py  config.py  kernel.py  llm.py  security.py
aion/distributed/: __init__.py  api.py  config.py  types.py
aion/learning/: __init__.py  config.py  loop.py  nn.py  types.py
aion/mcp/: __init__.py  bridge.py  chaos.py  credentials.py  distributed.py  manager.py  metrics.py  observability.py  protocol.py  registry.py  resilience.py  security.py  streaming.py  types.py  validation.py
aion/nlp/: __init__.py  api.py  config.py  engine.py  types.py  utils.py
aion/observability/: __init__.py  collector.py  context.py  health.py  manager.py  types.py
aion/persistence/: __init__.py  backup.py  config.py  cqrs.py  database.py  events.py  observability.py  (+3 more)
config/: default.json
tests/: __init__.py  conftest_learning.py  test_audio.py  test_automation.py  test_automation_sota.py  test_basic.py  test_conversation.py  test_distributed.py  test_goals.py  test_goals_sota.py  test_knowledge_graph.py  test_learning.py  test_llm_integration.py  test_mcp.py  test_multi_agent.py  test_nlp.py  test_observability.py  test_plugins.py  test_process_manager.py  test_security.py  test_security_sota.py  test_simulation.py  test_sota_features.py
(+616 files in other folders)
